# Hachimi-Toolkit

./: Cargo.toml
.github/workflows/: create_release.yml
plugins/Data-Dumper/: CMakeLists.txt
plugins/Data-Dumper/src/: main.cxx
plugins/Error-Logger/: CMakeLists.txt
plugins/Error-Logger/src/: main.cxx
plugins/IL2CPP-Dumper/: CMakeLists.txt
plugins/IL2CPP-Dumper/Dump/include/: il2cpp_api.hxx  utils.hxx  win32_compat.hxx
plugins/IL2CPP-Dumper/Dump/src/: dumper.cxx  il2cpp_api.cxx  il2cpp_class.cxx  il2cpp_image.cxx  main.cxx  scene_dumper.cxx  utils.cxx
plugins/Packet-Capture/: CMakeLists.txt
plugins/Packet-Capture/src/: main.cxx
plugins/Tester-Hooker/: CMakeLists.txt
plugins/Tester-Hooker/src/: main.cxx
plugins/Uma-Proxy/: CMakeLists.txt
plugins/Uma-Proxy/src/: main.cxx
src/android/: plugin_loader.rs
src/core/: gui.rs
src/il2cpp/hook/Cute_Core_Assembly/: Device.rs  SafetyNet.rs
src/il2cpp/hook/Cute_Cri_Assembly/: MovieManager.rs
src/il2cpp/hook/DOTween/: TweenManager.rs
src/il2cpp/hook/UnityEngine_AssetBundleModule/: AssetBundle.rs  AssetBundleRequest.rs
src/il2cpp/hook/UnityEngine_CoreModule/: Application.rs  GameObject.rs  QualitySettings.rs  Resources.rs  Screen.rs  Texture.rs
src/il2cpp/hook/UnityEngine_TextRenderingModule/: TextGenerator.rs  TextMesh.rs
src/il2cpp/hook/UnityEngine_UI/: EventSystem.rs  Text.rs
src/il2cpp/hook/Unity_RenderPipelines_Universal_Runtime/: ScriptableRenderer.rs
src/il2cpp/hook/umamusume/: CameraController.rs  CharacterNoteTopViewController.rs  Connecting.rs  CySpringController.rs  CySpringNative.rs  DialogRaceOrientation.rs  Director.rs  DownloadErrorProcessor.rs  DownloadView.rs  GallopUtil.rs  GameSystem.rs  GraphicSettings.rs  JikkyoDisplay.rs  LiveTheaterCharaSelect.rs  LiveTheaterViewController.rs  LiveUtil.rs  Localize.rs  LowResolutionCamera.rs  LyricsController.rs  NowLoading.rs  PartsGetSkillPlate.rs  PartsNamePlateBase.rs  PartsNickNameListItem.rs  PartsNickNameRibbon.rs  PartsSingleModeChoiceRewardTextElementViewModel.rs  PartsSingleModeSkillLearningListItem.rs  PartsSingleModeSkillListItem.rs  PartsSupportCardImproveDetail.rs  PaymentUtility.rs  RaceUtil.rs  SceneManager.rs  (+20 more)
tools/android/: build_plugins.sh  dev_nr_no_split.sh
tools/scenario_parser/: parse_scenario.py
tools/windows/: build_plugins.ps1
(+8 files in other folders)
